--- a/Latex/refs.bib
+++ b/Latex/refs.bib
@@ -140,3 +140,19 @@ https://github.com/pawelpiwowarski/Knowledge_and_Data/blob/main/Collections/Rijk
   howpublished = "\url{https://github.com/pawelpiwowarski/Knowledge_and_Data/blob/main/rijks_artworks_ontology_creation.py}",
 
 }
+
+@misc{base,
+
+
+  howpublished = "\url{https://github.com/pawelpiwowarski/Knowledge_and_Data/blob/main/turtle_files/base.ttl}",
+
+}
+
+@misc{notebook,
+
+
+  howpublished = "\url{
+https://github.com/pawelpiwowarski/Knowledge_and_Data/blob/main/Group_99.ipynb
+}",
+
+}
