--- a/Latex/refs.bib
+++ b/Latex/refs.bib
@@ -63,8 +63,7 @@ rma-csv-collection.zip}",
 @misc{Third_Github,
 
 
-  howpublished = "\url{https://github.com/Rijksmuseum/rijksmuseum.github.io/releases/download/1.0.0/202001-
-rma-csv-collection.zip}",
+  howpublished = "\url{https://github.com/Rijksmuseum/rijksmuseum.github.io/releases/download/1.0.0/202001-rma-csv-collection.zip}",
 
 }
 
